fix: decrease listing title function to prevent wrap not working

--- a/src/style.css
+++ b/src/style.css
@@ -32,6 +32,7 @@
 body {
     overflow-x: hidden;
     font-family: Arial, sans-serif;
+    background-color: #F4F8FF;
 }
 a {
     text-decoration: none;
@@ -355,6 +356,9 @@ a {
     font-family: Poppins_Light;
     font-size: 1.2rem;
     margin-top: 5%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .listing_details h5{
     font-family: Arial, Helvetica, sans-serif;
@@ -418,6 +422,7 @@ a {
     position: fixed;
     top: 0;
     pointer-events: none;
+    z-index: 100;
 }
 .desktoph{
     display: none;
